--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ msrest==0.6.13
 msrestazure==0.6.3
 oauthlib==3.1.0
 psycopg==3.0.10
+psycopg2-binary==2.9.3
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.2
