--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 adal==1.2.3
 astroid==2.4.1
-azure-common==1.1.25
-azure-servicebus==0.50.2
+azure-common==1.1.26
+azure-core==1.13.0
+azure-servicebus==7.0.0
 certifi==2020.4.5.1
 cffi==1.15.0
 chardet==3.0.4
@@ -18,7 +19,7 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-msrest==0.6.13
+msrest==0.6.17
 msrestazure==0.6.3
 oauthlib==3.1.0
 psycopg==3.0.10
